// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|Sidebar/SidebarList default 1`] = `
<span
  class="emotion-0"
>
  TODO SidebarList
</span>
`;

exports[`Storyshots UI|Sidebar/SidebarList empty 1`] = `
<span
  class="emotion-0"
>
  SidebarList empty state
</span>
`;

exports[`Storyshots UI|Sidebar/SidebarList loading 1`] = `
<span
  class="emotion-0"
>
  SidebarList loading state
</span>
`;
